--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-floating mb-3">
-                                    <input type="date" class="form-control" id="tanggal_sewa" name="tanggal_sewa" required>
-                                    <label for="tanggal_sewa">Tanggal Sewa *</label>
-                                    <div class="invalid-feedback">Harap pilih tanggal sewa</div>
+                                    <input type="datetime-local" class="form-control" id="tanggal_sewa" name="tanggal_sewa" required>
+                                    <label for="tanggal_sewa">Tanggal & Jam Sewa *</label>
+                                    <div class="invalid-feedback">Harap pilih tanggal dan jam sewa</div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating mb-3">
-                                    <input type="date" class="form-control" id="tanggal_kembali" name="tanggal_kembali" required>
-                                    <label for="tanggal_kembali">Tanggal Kembali *</label>
-                                    <div class="invalid-feedback">Harap pilih tanggal kembali</div>
+                                    <input type="datetime-local" class="form-control" id="tanggal_kembali" name="tanggal_kembali" required>
+                                    <label for="tanggal_kembali">Tanggal & Jam Kembali *</label>
+                                    <div class="invalid-feedback">Harap pilih tanggal dan jam kembali</div>
                                 </div>
                             </div>
                         </div>
