--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="form-container animate__animated animate__fadeIn">
-            <div class="header">
-                <img src="images/logo.png" alt="Ilham Camera Logo" class="logo animate__animated animate__pulse animate__infinite">
-                <h1 class="fw-bold mb-2">FORMULIR SEWA ILHAM CAMERA</h1>
-                <p class="mb-0">Silakan isi formulir dengan data yang benar</p>
-            </div>
+     <div class="header text-center mb-4">
+        <div class="logo-container">
+            <img src="images/logo.png" alt="Ilham Camera Logo" class="logo-large animate__animated animate__pulse animate__infinite">
+        </div>
+        <h1 class="fw-bold mb-2">FORMULIR SEWA ILHAM CAMERA</h1>
+        <p class="mb-0">Silakan isi formulir dengan data yang benar</p>
+     </div>
             
             <div class="form-section">
                 <div class="step-indicator">
