--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="form-container animate__animated animate__fadeIn">
             <div class="header">
-                <img src="images/logo.png" alt="Ilham Camera Logo" class="logo animate__animated animate__pulse animate__infinite">
+                <img src="images/logo.png" alt="Ilham Camera Logo">
                 <h1 class="fw-bold mb-2">FORMULIR SEWA ILHAM CAMERA</h1>
                 <p class="mb-0">Silakan isi formulir dengan data yang benar</p>
             </div>
