--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
             
             <div class="footer">
-                <p class="mb-1">© 2025 Ilham Camera - Solusi Sewa Kamera dan Peralatan Multimedia</p>
+                <p class="mb-1">© 2025 Ilham Camera - Your Photography & Videography Solutions</p>
                 <p class="mb-0"><i class="fas fa-phone me-2"></i> 6289-9924-0196 | <i class="fas fa-envelope me-2"></i> ilhamcamera.jbg@gmail.com</p>
             </div>
         </div>
